[package]
name = "test_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
geo = "0.30.0"
geo-types = "0.7.16"
image = "0.25.5"
js-sys = "0.3.77"
line_intersection = "0.4.0"
num-traits = "0.2.19"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2"
web-sys = { version= "0.3.77", features= ["console"]}
