[package]
name = "raycaster"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
geo = "0.30.0"
js-sys = "0.3.77"
num-traits = "0.2.19"
rand = "0.9.0"
getrandom = { version = "0.3.2", features = ["wasm_js"] }
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2"
web-sys = { version= "0.3.77", features= ["console"]}
rayon = "1.10.0"
num-complex = "0.4.6"
hsl = "0.1.1"
wasm-bindgen-rayon = { version = "1.3.0", optional = true }
rustc-hash = "2.1.1"
smallvec = "1.15.0"
dashmap = "6.1.0"


[features]
parallel = ["wasm-bindgen-rayon"]

[profile.dev]
opt-level = 3
